update main.css to fix layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -226,7 +226,7 @@ h6 {
     padding: 6px 15px;
   }
 
-  @media (max-width: 370px) {
+  @media (min-width: 370px) {
     .header .btn-getstarted {
       margin: 0 5px 0 0;
     }
